k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: todo-app

  template:
    metadata:
      labels:
        app: todo-app

    spec:
      containers:
        - name: todo-app
          image: jkaur001/todo-app:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
